styles/style.css
/* ... */
#header-nav li a {
  font-size: 18px;
  text-transform: uppercase;
  padding: 30px 114px;
  color: white;
  text-decoration: none;
}
/*decoration more transition of header */
#header-nav li a:hover {
  background-color: white;
  color: #ff8c69;
  transition: 0.8s ease-out;
  /* for the footer */
}
#general-footer {
  width: 100%;
  /* position: absolute; */
  bottom: 0;
  /* color change left to right of linear-gradient */
  background: linear-gradient(to right, #78828a, #283b4e, #451100);
  color: #fff;
  padding: 20px 0 10px;
  border-top-left-radius: 120px;
  font-size: 13px;
  line-height: 12px;
  clear: both;
}
.footer-row {
  width: 95%; /* gap between each row including 3 rows*/
  margin: auto;
  display: flex;
  flex-wrap: wrap;
  align-items: flex-start;
  justify-content: space-between;
}
/* divide the column equally */
.footer-col {
  flex-basis: 25%;
  padding: 10px;
}

/*team logo */
#general-footer .logo {
  width: 120px;
  margin-bottom: 30px;
  transition: 0.3s ease-in-out;
}

/* col 2 email phone */
.footer-col h3 {
  width: fit-content;
  margin-bottom: 40px;
  position: relative;
}
.footer-email-id {
  width: fit-content;
  border-bottom: 1px solid #333;
  margin: 20px 0;
  cursor: pointer;
}

.footer-email-id a {
  text-decoration: none;
  color: white;
}

.footer-col ul li {
  list-style: none;
  margin-bottom: 12px;
}

.footer-col ul li a {
  text-decoration: none;
  color: #fff;
}
/* last column, no need submit button */
.footer-col form {
  padding-bottom: 15px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  border-bottom: 1px solid #ccc;
  margin-bottom: 50px;
}
.footer-col form input {
  width: 100%;
  background: transparent;
  color: #ccc;
  border: 0;
  outline: none;
}

/* copy right the end */
.footer-col hr {
  width: 95%;
  border: 0;
  border-bottom: 1px solid #333;
  margin: 10px auto;
}
.footer-col a,
.footer-col h3,
.footer-col p {
  transition: 0.3s ease-in-out;
}

.footer-col a:hover,
.footer-col h3:hover,
.footer-col p:hover {
  color: #9bc7f4;
  transform: scale(1.2);
}

#general-footer .logo:hover {
  transform: scale(1.2);
}

@media screen and (min-width: 768px) {
  #header-nav {
    height: 150%;
  }
  .footer-row {
    flex-wrap: nowrap;
  }

  .footer-col {
    flex-basis: 25%;
    text-align: left;
  }
}

@media screen and (min-width: 1024px) {
  #header-nav {
    height: 120%;
  }
  .footer-col {
    flex-basis: 20%;
  }
}

/**************************** End of Header and Footer ***********************/

/**************************** Start of Enhancement 1 ***********************/

/*
CSS adapted from:
https://codepen.io/denic/pen/GRoOxbM
https://www.sitepoint.com/css-typewriter-effect/ */

/* Contains the heading + typing cursor and centers it */
.header-container {
  display: inline-block;
  text-align: center;
  display: flex;
  justify-content: center;
  margin-top: 5vw;
  margin-bottom: 30px;
}

/* Animation for index page heading */

.index-typed-out {
  overflow: hidden;
  border-right: 4px solid black;
  white-space: nowrap;
  animation: index-typing 1.5s steps(17, end) forwards,
    blink 0.5s step-end infinite alternate;
  width: 0;
}

@keyframes index-typing {
  from {
    width: 0;
  }
  to {
    width: 37%;
  }
}

/* Animation for apply page heading */
.apply-typed-out {
  overflow: hidden;
  border-right: 4px solid black;
  white-space: nowrap;
  animation: apply-typing 1.5s steps(24, end) forwards,
    blink 0.5s step-end infinite alternate;
  width: 0;
}

@keyframes apply-typing {
  from {
    width: 0;
  }
  to {
    width: 83%;
  }
}

/* Animation for about page heading */
.about-typed-out {
  overflow: hidden;
  border-right: 4px solid black;
  white-space: nowrap;
  animation: about-typing 1.5s steps(15, end) forwards,
    blink 0.5s step-end infinite alternate;
  width: 0;
}

@keyframes about-typing {
  from {
    width: 0;
  }
  to {
    width: 100%;
  }
}

/* Animation for job page heading */

.job-typed-out {
  overflow: hidden;
  border-right: 4px solid black;
  white-space: nowrap;
  animation: job-typing 1.5s steps(18, end) forwards,
    blink 0.5s step-end infinite alternate;
  width: 0;
}

@keyframes job-typing {
  from {
    width: 0;
  }
  to {
    width: 49%;
  }
}

/* Blinking cursor animation */

@keyframes blink {
  50% {
    border-color: transparent;
  }
}

/**************************** End of Enhancement 1 ***********************/

/**************************** Start of Enhancement 2 ***********************/

.about-card:hover {
  transform: scale(1.2);
  background: linear-gradient(#6045ea, #8567f7);
  color: whitesmoke;
}
.about-card:hover > p {
  color: white;
}

.about-card:hover > img {
  transform: scale(1.1);
}
.about-mail a:hover {
  transform: scale(1.2);
  background-image: linear-gradient(#6045ea, #8567f7);
  color: whitesmoke;
}
/**************************** End of Enhancement 2 ***********************/

